--- a/Components/Jobs.module.scss
+++ b/Components/Jobs.module.scss
@@ -7,6 +7,7 @@
     display : flex;
     align-items: center;
     gap : 2rem;
+    // background-color : green;
     .job{
         width : 18rem;
         height : 6rem;
