--- a/Components/Welcome.module.scss
+++ b/Components/Welcome.module.scss
@@ -1,7 +1,6 @@
-
 .center{
     width : 100vw;
-    height : 60vh;
+    // height : 60vh;
     position : relative;
     background: linear-gradient(to right,#FC246A,#c95177b1,black,black,black,black,black,rgba(255, 255, 255, 0.571));
     display : flex;
@@ -20,31 +19,6 @@
             color : white;
             font-size : 4rem;
         }
-        #search{
-            width: 80%;
-            height: 5vh;
-            border-radius: 1.9rem;
-            overflow : hidden;
-            position: relative;
-            margin-top: 1.8rem;
-            border: 1px solid white;
-            input{
-                width : 100%;
-                height : 100%;
-                padding: 15px;
-                border-radius: 25px;
-                background-color: rgba(255, 255, 255, 0.272);
-                border: 1px solid white;
-            }
-            i{
-                position: absolute;
-                right: 2rem;
-                color : white;
-                font-size: 1.5rem;
-                top : 50%;
-                transform: translate(0, -50%);      
-            }
-        }
     }
     .right{
         width : 50%;
@@ -57,5 +31,17 @@
             height : 100%;
         }
     }
+}
 
+@media only screen and (max-width : 777px){
+    .center{
+        flex-direction : column;
+        gap : 2rem;
+        .left{
+            width : 100%;
+        }
+        .right{
+            width : 100%;
+        }
+    }
 }
