--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,14 +7,30 @@
 html,body{
   width: 100%;
   height : 100%;
+  font-size : 100%;
 }
-
+*::-webkit-scrollbar{
+  display : none;
+}
 #main{
   width : 100%;
+  overflow: hidden;
 }
 
 #pageOne{
   width : 100vw;
-  height : 100vh;
+  height : 200vh;
   position : relative;
+}
+
+@media only screen and (max-width:1100px){
+  html{
+    font-size : 69%;
+  }
+}
+
+@media only screen and (max-width:777px){
+  html{
+    font-size : 55%;
+  }
 }
