--- a/Components/NavBar.module.scss
+++ b/Components/NavBar.module.scss
@@ -13,33 +13,38 @@ $pink : #FC246A;
 .nav{
     max-width : 100vw;
     height : 5rem;
-    background-color: black;
+    background-color: #253B49;
     display : flex;
     align-items: center;
     justify-content : space-between;
-    padding : 0 2rem;
+    padding : 0 10rem;
     border-top: 2px solid white;
     border-bottom: 2px solid white;
     position : relative;
     .logo{
-        width : 6rem;
+        min-width : 18rem;
         height : 100%;
-        @include center;
-        color: $pink;
+        img{
+            width : 100%;
+            height : 100%;
+            object-fit : cover;
+            object-position : center;
+        }
     }
     .manu{
+        padding-left : 2rem;
         width : 75rem;
         height : 100%;
         display: flex;
         align-items: center;
-        gap : 6rem;
     }
     .hid{
+        padding-left : 2rem;
         width : 75rem;
         height : 100%;
         display: flex;
         align-items: center;
-        gap : 6rem;
+        gap : 5rem;
     }
     .authentication{
         @include center;
@@ -59,8 +64,10 @@ $pink : #FC246A;
     }
 }
 
+
 @media only screen and (max-width : 777px){
     .nav{
+         padding : 0 2rem;
         .hid{display : none;}
         .manu{
             position : absolute;
