--- a/Components/Welcome.module.scss
+++ b/Components/Welcome.module.scss
@@ -2,7 +2,8 @@
     width : 100vw;
     // height : 60vh;
     position : relative;
-    background: linear-gradient(to right,#FC246A,#c95177b1,black,black,black,black,black,rgba(255, 255, 255, 0.571));
+    // background: linear-gradient(to right,#FC246A,#c95177b1,black,black,black,black,black,rgba(255, 255, 255, 0.571));
+    background: linear-gradient(to right,#FC246A,#c95177b1,#253B49,#253B49,#253B49,#253B49,#253B49,rgba(255, 255, 255, 0.571));
     display : flex;
 
     .left{
@@ -10,10 +11,13 @@
         height : 100%;
         position : relative;
         padding-top: 4rem;
-        padding-left: 2rem;
+        padding-left: 10rem;
         h1{
             font-size: 8rem;
             color : white;
+            span{
+                color : #F8CD22;
+            }
         }
         h4{
             color : white;
@@ -24,8 +28,7 @@
         width : 50%;
         height : 100%;
         position : relative;
-        padding-top : 1rem;
-        padding-right: 12rem;
+        padding-right: 10rem;
         img{
             width : 100%;
             height : 100%;
@@ -39,9 +42,11 @@
         gap : 2rem;
         .left{
             width : 100%;
+            padding-left: 2rem;
         }
         .right{
             width : 100%;
+            padding-right: 2rem;
         }
     }
 }
