--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,7 +14,7 @@ html,body{
 }
 #main{
   width : 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 #pageOne{
@@ -23,9 +23,34 @@ html,body{
   position : relative;
 }
 
-@media only screen and (max-width:1100px){
+@media only screen and (max-width:1700px){
+  html{
+    font-size : 85%;
+  }
+}
+@media only screen and (max-width:1600px){
+  html{
+    font-size : 85%;
+  }
+}
+@media only screen and (max-width:1300px){
   html{
     font-size : 69%;
+  }
+}
+@media only screen and (max-width:1500px){
+  html{
+    font-size : 65%;
+  }
+}
+@media only screen and (max-width:1100px){
+  html{
+    font-size : 60%;
+  }
+}
+@media only screen and (max-width:999px){
+  html{
+    font-size : 50%;
   }
 }
 
