--- a/Components/Profile.scss
+++ b/Components/Profile.scss
@@ -122,6 +122,54 @@
   display: flex;
   padding-right: 15px;
 }
+.hid{
+  display : none;
+}
+.cards{
+  position : absolute;
+  margin-top : 2rem;
+  width : 60%;
+  padding : 2rem;
+  display : flex;
+  gap : 5rem;
+  flex-wrap : wrap;
+  .card{
+      width :30rem;
+      border-radius: 10px;
+      background-color : #FFFFFF;
+      overflow : hidden;
+      position: relative;
+      .internship{
+          width : 100%;
+          // height : 8rem;
+          padding : 1rem;
+          position : relative;
+          h3{
+              text-transform : capitalize;
+          }
+          .line{
+              width : calc(100% - 2rem);
+              left : 1rem;
+              height : 2px;
+              background-color : black;
+              opacity : .7;
+              position : absolute;
+              bottom : 0%;
+          }
+      }
+      .details{
+          width : 100%;
+          // height : 8rem;
+          padding-left : 1rem;
+          padding-top : 1.7rem;
+      }
+      .more{
+          width : 100%;
+          padding-left: 1rem;
+          color : blue;
+      }
+  }
+}
 
 .profile-side {
   width: 300px;
@@ -210,6 +258,7 @@ button.createbtn i {
   width: 100%;
   z-index: -1;
 }
+
 
 .nav ul {
   display: flex;
