--- a/Components/NavBar.module.scss
+++ b/Components/NavBar.module.scss
@@ -4,31 +4,38 @@
     justify-content: center;
     align-items: center;
 }
-$pink : #FC246A;
 .link{
-    color : white;
+    // color : white;
+    // color : #10C8CF;
+    color : #5F6060;
     text-decoration: none;
     font-size: 1.2rem;
+    text-transform : uppercase;
 }
 .nav{
     max-width : 100vw;
-    height : 5rem;
-    background-color: #253B49;
+    height : 4.5rem;
+    background-color: #FFFFFF;
     display : flex;
     align-items: center;
     justify-content : space-between;
     padding : 0 10rem;
+    margin-top : 4px;
     border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    position : relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.215);
     .logo{
         min-width : 18rem;
         height : 100%;
+        // background-color : green;
+        overflow : hidden;
+        padding-left : 1rem;
         img{
-            width : 100%;
+            margin-top : 1.4rem;
+            width : 95%;
             height : 100%;
             object-fit : cover;
             object-position : center;
+            scale : 1.5;
         }
     }
     .manu{
