--- a/Components/internships.module.scss
+++ b/Components/internships.module.scss
@@ -5,19 +5,22 @@
     background-color : #FAFAFA;
     .nav{
         margin-top : 2rem;
+        padding-top: 1rem;
         width : calc(100vw - 20rem);
-        height : 5rem;
         position : relative;
         h1{
             text-transform : capitalize;
+            span{
+                color : #10C8CF;
+            }
         }
     }
     .cards{
         position : relative;
-        margin-top : 2rem;
+        margin-top : 1rem;
         width : calc(100vw - 20rem);
         // background-color : #FFFFFF;
-        padding : 2rem;
+        padding : 1rem 2rem;
         display : flex;
         gap : 5rem;
         flex-wrap : wrap;
@@ -27,9 +30,9 @@
             background-color : #FFFFFF;
             overflow : hidden;
             position: relative;
+            border : 1px solid rgba(0, 0, 0, 0.215);
             .internship{
                 width : 100%;
-                // height : 8rem;
                 padding : 1rem;
                 position : relative;
                 h3{
@@ -39,7 +42,7 @@
                     width : calc(100% - 2rem);
                     left : 1rem;
                     height : 2px;
-                    background-color : black;
+                    background-color : rgba(0, 0, 0, 0.215);
                     opacity : .7;
                     position : absolute;
                     bottom : 0%;
@@ -47,15 +50,29 @@
             }
             .details{
                 width : 100%;
-                // height : 8rem;
                 padding-left : 1rem;
                 padding-top : 1.7rem;
+                .span{
+                    display : flex;
+                    gap : .5rem;
+                }
             }
             .more{
+                margin-top : 1rem;
                 width : 100%;
                 padding-left: 1rem;
-                color : blue;
+                padding-bottom: 1rem;
+                .link{
+                    text-decoration: none;
+                    color : #10C8CF;
+                }
             }
         }
+    }
+}
+
+@media only screen and (max-width : 777px){
+    .internships{
+            padding : 0 2rem;
     }
 }
