--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,6 +2,7 @@
   margin : 0;
   padding : 0;
   box-sizing: border-box;
+  font-family : "Comfortaa"
 }
 
 html,body{
@@ -14,7 +15,6 @@ html,body{
 }
 #main{
   width : 100%;
-  // overflow: hidden;
 }
 
 #pageOne{
