--- a/Components/EmployeProfile.scss
+++ b/Components/EmployeProfile.scss
@@ -92,7 +92,9 @@
     font-weight: bold;
     transition:0.4s;
 }
-
+.container{
+  padding-top : 6rem;
+}
 .profile-header {
   background: #fff;
   width: 100%;
