--- a/Components/Welcome.module.scss
+++ b/Components/Welcome.module.scss
@@ -1,6 +1,7 @@
 $black : #333333;
 .center{
     width : 100vw;
+    padding-top : 6rem;
     // height : 60vh;
     position : relative;
     // background: linear-gradient(to right,#FC246A,#c95177b1,black,black,black,black,black,rgba(255, 255, 255, 0.571));
@@ -8,7 +9,7 @@ $black : #333333;
     // background: linear-gradient(to right,#10C8CF,#c95177b1,#253B49,#253B49,#253B49,#253B49,#253B49,rgba(255, 255, 255, 0.571));
     // background-color : rgba(16, 201, 207, 0.376);
     display : flex;
-
+    background-color : #fafafa;
     .left{
         width : 50%;
         height : 100%;
