--- a/Components/internships.module.scss
+++ b/Components/internships.module.scss
@@ -1,78 +1,90 @@
-.internships{
-    width : 100vw;
+.internships {
+  width: 100vw;
+  position: relative;
+  padding: 0 10rem;
+  background-color: #fafafa;
+  .nav {
+    margin-top: 2rem;
+    padding-top: 1rem;
+    width: calc(100vw - 20rem);
     position: relative;
-    padding : 0 10rem;
-    background-color : #FAFAFA;
-    .nav{
-        margin-top : 2rem;
-        padding-top: 1rem;
-        width : calc(100vw - 20rem);
-        position : relative;
-        h1{
-            text-transform : capitalize;
-            span{
-                color : #10C8CF;
-            }
-        }
+    h1 {
+      text-transform: capitalize;
+      span {
+        color: #10c8cf;
+      }
     }
-    .cards{
-        position : relative;
-        margin-top : 1rem;
-        width : calc(100vw - 20rem);
-        // background-color : #FFFFFF;
-        padding : 1rem 2rem;
-        display : flex;
-        gap : 5rem;
-        flex-wrap : wrap;
-        .card{
-            width : 20rem;
-            border-radius: 10px;
-            background-color : #FFFFFF;
-            overflow : hidden;
-            position: relative;
-            border : 1px solid rgba(0, 0, 0, 0.215);
-            .internship{
-                width : 100%;
-                padding : 1rem;
-                position : relative;
-                h3{
-                    text-transform : capitalize;
-                }
-                .line{
-                    width : calc(100% - 2rem);
-                    left : 1rem;
-                    height : 2px;
-                    background-color : rgba(0, 0, 0, 0.215);
-                    opacity : .7;
-                    position : absolute;
-                    bottom : 0%;
-                }
-            }
-            .details{
-                width : 100%;
-                padding-left : 1rem;
-                padding-top : 1.7rem;
-                .span{
-                    display : flex;
-                    gap : .5rem;
-                }
-            }
-            .more{
-                margin-top : 1rem;
-                width : 100%;
-                padding-left: 1rem;
-                padding-bottom: 1rem;
-                .link{
-                    text-decoration: none;
-                    color : #10C8CF;
-                }
-            }
+  }
+  .cards {
+    position: relative;
+    margin-top: 1rem;
+    width: calc(100vw - 20rem);
+    // background-color : #FFFFFF;
+    padding: 1rem 2rem;
+    display: flex;
+    gap: 5rem;
+    flex-wrap: wrap;
+    .card {
+      width: 20rem;
+      border-radius: 10px;
+      background-color: #ffffff;
+      overflow: hidden;
+      position: relative;
+      border: 1px solid rgba(0, 0, 0, 0.215);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      transition: box-shadow 1s;
+      transition-timing-function: ease-in-out;
+      &:hover {
+        transition-timing-function: ease-in-out;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.372),
+          0 6px 20px 0 rgba(0, 0, 0, 0.359);
+      }
+      .internship {
+        width: 100%;
+        padding: 1rem;
+        position: relative;
+        h3 {
+          text-transform: capitalize;
         }
+        .line {
+          width: calc(100% - 2rem);
+          left: 1rem;
+          height: 2px;
+          background-color: rgba(0, 0, 0, 0.215);
+          opacity: 0.7;
+          position: absolute;
+          bottom: 0%;
+        }
+      }
+      .details {
+        width: 100%;
+        padding-left: 1rem;
+        padding-top: 1.7rem;
+        .span {
+          display: flex;
+          gap: 0.5rem;
+        }
+      }
+      .more {
+        margin-top: 1rem;
+        width: 100%;
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        .link {
+          text-decoration: none;
+          color: #10c8cf;
+        }
+      }
     }
+  }
 }
 
-@media only screen and (max-width : 777px){
-    .internships{
-            padding : 0 2rem;
+@media only screen and (max-width: 777px) {
+  .internships {
+    padding: 0 2rem;
+    .internship{
+        width : calc(100vw - 4rem);
     }
+  }
 }
