--- a/Components/EmployeProfile.scss
+++ b/Components/EmployeProfile.scss
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Bree+Serif&display=swap");
-
-
 .joblayout{
     position : absolute;
     width : 100vw;
@@ -94,6 +90,7 @@
 }
 .container{
   padding-top : 6rem;
+  min-height : 100vh;
 }
 .profile-header {
   background: #fff;
