--- a/Components/Profile.scss
+++ b/Components/Profile.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Bree+Serif&display=swap");
-
-
+.container{
+  padding-top : 6rem;
+  min-height : 100vh;
+}
 .profile-header {
   background: #fff;
   width: 100%;
