--- a/Components/Profile.scss
+++ b/Components/Profile.scss
@@ -129,45 +129,79 @@
   position : absolute;
   margin-top : 2rem;
   width : 60%;
-  padding : 2rem;
+  padding: 1rem 2rem;
   display : flex;
   gap : 5rem;
   flex-wrap : wrap;
-  .card{
-      width :30rem;
-      border-radius: 10px;
-      background-color : #FFFFFF;
-      overflow : hidden;
+  .card {
+    width: 20rem;
+    border-radius: 10px;
+    background-color: #ffffff;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid rgba(0, 0, 0, 0.215);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+      0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: box-shadow 1s;
+    transition-timing-function: ease-in-out;
+    &:hover {
+      transition-timing-function: ease-in-out;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.372),
+        0 6px 20px 0 rgba(0, 0, 0, 0.359);
+    }
+    .internship {
+      width: 100%;
+      padding: 1rem;
       position: relative;
-      .internship{
-          width : 100%;
-          // height : 8rem;
-          padding : 1rem;
-          position : relative;
-          h3{
-              text-transform : capitalize;
-          }
-          .line{
-              width : calc(100% - 2rem);
-              left : 1rem;
-              height : 2px;
-              background-color : black;
-              opacity : .7;
-              position : absolute;
-              bottom : 0%;
-          }
+      h3 {
+        text-transform: capitalize;
       }
-      .details{
-          width : 100%;
-          // height : 8rem;
-          padding-left : 1rem;
-          padding-top : 1.7rem;
+      .line {
+        width: calc(100% - 2rem);
+        left: 1rem;
+        height: 2px;
+        background-color: rgba(0, 0, 0, 0.215);
+        opacity: 0.7;
+        position: absolute;
+        bottom: 0%;
       }
-      .more{
-          width : 100%;
-          padding-left: 1rem;
-          color : blue;
+    }
+    .job {
+      width: 100%;
+      padding: 1rem;
+      position: relative;
+      h3 {
+        text-transform: capitalize;
       }
+      .line {
+        width: calc(100% - 2rem);
+        left: 1rem;
+        height: 2px;
+        background-color: rgba(0, 0, 0, 0.215);
+        opacity: 0.7;
+        position: absolute;
+        bottom: 0%;
+      }
+    }
+    .details {
+      width: 100%;
+      padding-left: 1rem;
+      padding-top: 1.7rem;
+      .span {
+        display: flex;
+        gap: 0.5rem;
+      }
+    }
+    .more {
+      margin-top: 1rem;
+      width: 100%;
+      padding-left: 1rem;
+      padding-bottom: 1rem;
+      .link {
+        text-decoration: none;
+        color: #10c8cf;
+      }
+    }
   }
 }
 
@@ -264,13 +298,12 @@ button.createbtn i {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-  height: 40px;
   background: #fff;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .nav ul li {
-  padding: 10px;
+  padding: 2px 10px;
   width: 100%;
   cursor: pointer;
   text-align: center;
